# dynamic_reconfigure_template

./: CMakeLists.txt  README.md  package.xml
cfg/: Tutorials.cfg
scripts/: client.py  server.py
