<?xml version="1.0"?>
<package format="2">
  <name>dynamic_reconfigure_template</name>
  <version>0.0.0</version>
  <description>Dynamic reconfigure template with Python</description>
  <maintainer email="schmidrobin@outlook.com">Robin Schmid</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
